<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.artoo.personalfinance.Home" >

    <item
        android:id="@+id/sms_settings"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/change_sms_pref"/>
    
    
    <item
        android:id="@+id/current_permission"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/view_your_preference"/>
    <item
        
        android:id="@+id/new_tran_menu_item"
        android:icon="@drawable/new_transaction"
        android:orderInCategory="5"
        android:title="@string/new_transaction"
        android:visible="true"
        app:showAsAction="ifRoom"/>

</menu>