<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manual_tran_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fillViewport="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/rupee_symbol"
                android:textColor="@android:color/black"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/tran_amt_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:hint="@string/enter_transaction_amount"
                android:inputType="numberDecimal|textMultiLine"
                android:paddingEnd="5dp"
                android:paddingLeft="70dp"
                android:paddingRight="5dp"
                android:paddingStart="70dp"
                android:textSize="50sp" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/tran_type_radio_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:checked="true"
                android:id="@+id/rbg_inc"
                android:layout_weight="1"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/rbg_exp"
                android:layout_weight="1"
                android:text="@string/expense" />
        </RadioGroup>

        <TextView
            android:id="@+id/tran_category_text_view"
            style="@android:style/Widget.EditText"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/default_category" />

        <EditText
            android:id="@+id/tran_note_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/add_a_note"
            android:inputType="textCapSentences|textMultiLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calendar_image"
                android:paddingTop="5dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/tran_date_edt"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:focusableInTouchMode="false"
                android:hint="@string/select_date"
                android:paddingEnd="5dp"
                android:paddingLeft="40dp"
                android:paddingRight="5dp"
                android:paddingStart="40dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/tran_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#448aff"
                android:padding="10dp"
                android:text="@string/save_transaction"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>