<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transaction_first_row_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:paddingBottom="0dp" >

    <TextView
        android:id="@+id/transaction_first_row_header_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:text="@string/summary"
        android:textColor="@color/header_text_view_color"
        android:textSize="25sp" >
    </TextView>

    <TextView
        android:id="@+id/transaction_first_row_summmary_period_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/income_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/transaction_first_row_income_header_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/income" />

        <TextView
            android:id="@+id/transaction_first_row_income_value_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/income_color" />
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/expense_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/transaction_first_row_expense_header_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />

            <TextView
                android:paddingTop="5dp"
                android:id="@+id/transaction_first_row_total_header_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/transaction_first_row_expense_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/expense_color" />

            <TextView
                android:id="@+id/total_transaction_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>